--- a/src/app/theme/components/messages/messages.component.scss
+++ b/src/app/theme/components/messages/messages.component.scss
@@ -1,4 +1,8 @@
 #messagesDropDown {
+    .a-head{
+        display: flex;
+        position: relative;
+    }
     .dropdown-menu {
         width: 312px;
     }
@@ -12,7 +16,6 @@
     .notifica-head{
         display: flex;
         position: absolute;
-        margin-left: 5px;
         color: #fff;
         justify-content: center;
         align-items: center;
@@ -20,8 +23,8 @@
         height: 15px;
         border-radius: 50%;
         font-size: 12px;
-        top: -2px;
-        right: -2px;
+        top: -4px;
+        right: -4px;
         background: rgba(255, 0, 0, 0.521);
     }
     .leido{
